--- a/control-monad-loop.cabal
+++ b/control-monad-loop.cabal
@@ -12,6 +12,9 @@ category:           Control
 build-type:         Simple
 cabal-version:      >=1.8
 
+extra-source-files:
+    test/leak.hs
+
 library
     exposed-modules:
         Control.Monad.Trans.Loop
