--- a/control-monad-loop.cabal
+++ b/control-monad-loop.cabal
@@ -5,6 +5,7 @@ description:
     A library of looping constructs with @continue@ and @exit@ control flow
     statements.
 homepage:           https://github.com/joeyadams/haskell-control-monad-loop
+bug-reports:        https://github.com/joeyadams/haskell-control-monad-loop/issues
 license:            BSD3
 license-file:       LICENSE
 author:             Joey Adams
@@ -17,6 +18,10 @@ cabal-version:      >=1.8
 extra-source-files:
     test/leak.hs
     test/liftLocal.hs
+
+source-repository head
+    type:       git
+    location:   git://github.com/joeyadams/haskell-control-monad-loop
 
 library
     exposed-modules:
