--- a/control-monad-loop.cabal
+++ b/control-monad-loop.cabal
@@ -30,5 +30,6 @@ library
 
     build-depends   : base >= 4 && < 5
                     , transformers
+                    , transformers-base
 
     ghc-options: -Wall -fwarn-tabs
