--- a/control-monad-loop.cabal
+++ b/control-monad-loop.cabal
@@ -18,6 +18,7 @@ cabal-version:      >=1.8
 extra-source-files:
     test/leak.hs
     test/liftLocal.hs
+    test/lift-continue.hs
     test/recycled-numbers.hs
 
 source-repository head
